...
/// It allows handling asynchronous loading of markdown file.

// 20230828 gjw NOT CURRENTLY USED SO COMMENT OUT FOR NOW.

// FutureBuilder markdownFileBuilder(String markdownFilePath) {
//   return FutureBuilder(
//     key: const Key('markdown_file'),
//     future: loadAsset(markdownFilePath),
//     builder: (context, snapshot) {
//       if (snapshot.hasData) {
//         return Markdown(
//           data: snapshot.data!,
//           // Custom image builder to load assets.
...
