...
    // TODO 20241016 gjw TUNE THE PROCESSING FOR nnet() SPECIFICALLY

    // The original authoir combined the string processing for nnet() and
    // neuralnet() but we will eventually want function output specific
    // processing so best to separate them

    if (algorithm == 'neuralnet') {
      content = rExtract(stdout, 'print(model_neuralnet)');
      const String hd = 'Summary of the NeuralNet model.';
      final String fm = rExtractFormula(stdout);

      if (content.isNotEmpty) {
        // Capitalise each line and for the Input: line, wordwrap and comma
...
