...
        configTopGap,
        Row(
          spacing: configWidgetSpace,
          children: [
            configLeftGap,
            ActivityButton(
              key: const Key('Build Neural Network'),
              tooltip: '''

              **Build**

              Tap here to build a Neural Network model using the
              parameter values set here.
...
